[gd_scene load_steps=6 format=3 uid="uid://u1aw6tfwtpj7"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_n3sat"]
[ext_resource type="Material" uid="uid://crsssopeoektn" path="res://materials/color_limiter.tres" id="1_o8c6h"]
[ext_resource type="Script" path="res://scripts/menu_button.gd" id="1_vll2t"]
[ext_resource type="FontFile" uid="uid://c3ixggxuaqm1l" path="res://fonts/Nintendo-DS-BIOS.ttf" id="3_6lyhf"]
[ext_resource type="Texture2D" uid="uid://cvi2oosdjfdf" path="res://sprites/logo.png" id="3_mfvad"]

[node name="MainMenu" type="Node2D"]
material = ExtResource("1_o8c6h")
script = ExtResource("1_n3sat")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 256.0
offset_bottom = 192.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(128, 88)
texture = ExtResource("3_mfvad")

[node name="VersionLabel" type="Label" parent="."]
top_level = true
use_parent_material = true
offset_left = 1.0
offset_top = 167.0
offset_right = 129.0
offset_bottom = 191.0
theme_override_fonts/font = ExtResource("3_6lyhf")
vertical_alignment = 2

[node name="PMenuButton1" type="Button" parent="."]
use_parent_material = true
offset_left = 8.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 112.0
text = "Play"
script = ExtResource("1_vll2t")
color = Color(1, 0.490196, 0, 1)

[node name="PMenuButton2" type="Button" parent="."]
use_parent_material = true
offset_left = 192.0
offset_top = 72.0
offset_right = 248.0
offset_bottom = 112.0
text = "Pratice"
clip_text = true
script = ExtResource("1_vll2t")
color = Color(1, 0.490196, 0, 1)

[node name="PMenuButton3" type="Button" parent="."]
use_parent_material = true
offset_left = 211.0
offset_top = 158.0
offset_right = 254.0
offset_bottom = 189.0
text = "Mod"
script = ExtResource("1_vll2t")
